# src/controllers/usuário/excluirUsuarioPorID.ts
@@ -4,21 +4,31 @@ import { Authenticator } from '../../services/midleware/Authenticator';
 
 export const excluirUsuarioPorID = async (req: Request, res: Response) => {
     try {
-        const token = req.headers.authorization;
-        if (!token) {
+        const authHeader = req.headers.authorization;
+
+        if (!authHeader) {
             return res.status(401).json({ message: 'Acesso não autorizado' });
         }
 
-        const auth = new Authenticator();
-        const tokenData = auth.getTokenData(token);
+        const token = authHeader.split(' ')[1];
+        if (!token) {
+            return res.status(401).json({ message: 'Token não fornecido ou malformado' });
+        }
 
-        if (tokenData.tipo !== 'adm') {
+        const auth = new Authenticator();
+        let tokenData;
+        try {
+            tokenData = auth.getTokenData(token);
+        } catch (error) {
+            return res.status(401).json({ message: 'Token inválido' });
+        }
+
+        if (tokenData.tipo !== 'usuario') {
             return res.status(403).json({ message: 'Acesso negado' });
         }
-        
-        const { id_usuario } = req.params;
+        const idUsuarioLogado = tokenData.id_usuario 
 
-        const usuarioExistente = await knex('usuario').where('id_usuario', id_usuario).first();
+        const usuarioExistente = await knex('usuario').where('id_usuario', idUsuarioLogado).first();
         if (!usuarioExistente) {
             return res.status(404).json({ message: 'Usuário não encontrado.' });
         }
@@ -27,7 +37,7 @@ export const excluirUsuarioPorID = async (req: Request, res: Response) => {
 
         await knex('beneficios_contratados').where('id_usuario', usuarioExistente.id_usuario).del();
 
-        await knex('usuario').where('id_usuario', id_usuario).del();
+        await knex('usuario').where('id_usuario', idUsuarioLogado).del();
 
         res.status(200).json({ message: 'Usuário excluído com sucesso.' });
     } catch (error) {
