# src/controllers/usuário/listarCuponsUsuario.ts
@@ -4,19 +4,30 @@ import { Authenticator } from '../../services/midleware/Authenticator';
 
 export const listarCuponsUsuario = async (req: Request, res: Response) => {
     try {
-        const token = req.headers.authorization;
-        if (!token) {
+        const authHeader = req.headers.authorization;
+
+        if (!authHeader) {
             return res.status(401).json({ message: 'Acesso não autorizado' });
         }
 
+        const token = authHeader.split(' ')[1];
+        if (!token) {
+            return res.status(401).json({ message: 'Token não fornecido ou malformado' });
+        }
+
         const auth = new Authenticator();
-        const tokenData = auth.getTokenData(token);
+        let tokenData;
+        try {
+            tokenData = auth.getTokenData(token);
+        } catch (error) {
+            return res.status(401).json({ message: 'Token inválido' });
+        }
 
         if (tokenData.tipo !== 'usuario') {
             return res.status(403).json({ message: 'Acesso negado' });
         }
 
-        const idUsuarioLogado = tokenData.id_usuario
+        const idUsuarioLogado = tokenData.id_usuario;
 
         const cupons = await knex('cupons_gerados')
             .join('beneficios_contratados', 'cupons_gerados.id_contratacao', '=', 'beneficios_contratados.id_contratacao')
